Fixed overflow problem and css problem on book-facility, book-classes and profile

--- a/client/src/components/pages/bookFacility/bookfacility.css
+++ b/client/src/components/pages/bookFacility/bookfacility.css
@@ -6,7 +6,6 @@
     align-items: center;
     justify-content: center;
     font-family: Arimo;
-    overflow: auto;
 }
 
 .facWrapper{
